<resources>
    <string name="app_name">RelaytiveLayout Circle</string>
    <string name="btn1">btn1</string>
    <string name="btn2">Button</string>
    <string name="btn3">Button</string>
    <string name="btn4">Button</string>
    <string name="btn5">Button</string>
    <string name="btn6">Button</string>
    <string name="btn7">Button</string>
    <string name="btn8">Button</string>
    <string name="btn9">Button</string>
</resources>
